fix intro background not covering full screen on safair

--- a/source/_sass/base/_intro.scss
+++ b/source/_sass/base/_intro.scss
@@ -3,7 +3,8 @@ body.home-intro {
   display: table;
 
   .intro {
-    display: table-cell;
+    display: flex;
+    height: 100%;
   }
 }
 
